--- a/.github/workflows/govmm.yml
+++ b/.github/workflows/govmm.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.15.x, 1.16.x]
+        go-version: [1.16.x, 1.17.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -18,6 +18,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: latest
-          args: -c .golangci.yml -v
+          working-directory: src/runtime/pkg/govmm
+          args: -c src/runtime/pkg/govmm/.golangci.yml -v
       - name: go test
-        run: go test ./...
+        run: go test src/runtime/pkg/govmm/...
